WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315345
[GTK][WPE] Dynamic scrollbar-width changes are not repainted
https://bugs.webkit.org/show_bug.cgi?id=315345
Summary
[GTK][WPE] Dynamic scrollbar-width changes are not repainted
klee
Reported
2026-05-22 01:07:10 PDT
On WPE and GTK, ScrollbarsControllerGeneric does not override scrollbarWidthChanged(), so dynamic CSS scrollbar-width changes are not repainted until the next full layout invalidation. Mac and Remote controllers already handle this. This blocks WPT css/css-scrollbars/scrollbar-width-paint-001..006.html.
Attachments
Add attachment
proposed patch, testcase, etc.
klee
Comment 1
2026-05-22 01:15:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65465
EWS
Comment 2
2026-05-22 03:04:53 PDT
Committed
313719@main
(ea6f507822be): <
https://commits.webkit.org/313719@main
> Reviewed commits have been landed. Closing PR #65465 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-05-22 03:05:14 PDT
<
rdar://problem/177700182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug