[GTK][WPE] Dynamic scrollbar-width changes are not repainted https://bugs.webkit.org/show_bug.cgi?id=315345

Reviewed by Carlos Garcia Campos.

ScrollbarsControllerGeneric did not override scrollbarWidthChanged(),
so dynamic CSS scrollbar-width updates left the Scrollbar's m_widthStyle
and frameRect stale and the previous thickness kept being painted.
ScrollbarsControllerMac and RemoteScrollbarsController already do this.

Override scrollbarWidthChanged() in ScrollbarsControllerGeneric to call
updateScrollbarsThickness(), which re-reads scrollbarWidthStyle() on each
Scrollbar and resizes its frameRect via the theme.

* Source/WebCore/platform/generic/ScrollbarsControllerGeneric.h:
* Source/WebCore/platform/generic/ScrollbarsControllerGeneric.cpp:
(WebCore::ScrollbarsControllerGeneric::scrollbarWidthChanged):
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:

Canonical link: https://commits.webkit.org/313719@main